Fixed sponsored content issue, not showing posts in random order

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -7117,7 +7117,7 @@ section.gravityform{
 		transform: scale(1.2);
 	}
 	.mobile-body {
-		padding-top: 60px;
+		padding-top: 95px;
 	}
 	body.home #content {
 		.wrapper {
