--- a/style.css
+++ b/style.css
@@ -12427,7 +12427,7 @@ section.gravityform {
         -ms-transform: scale(1.2);
             transform: scale(1.2); }
   .mobile-body {
-    padding-top: 60px; }
+    padding-top: 95px; }
   body.home #content .wrapper {
     padding-left: 20px;
     padding-right: 20px; }
